--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,7 @@
 :root {
-    /* Нагадайте учням про змінні */
-    --color-primary: #304ffe;
+    --color-primary: #ff0000;
     --color-primary-darker: #0026ca;
-    --color-accent: #FF7939;
+    --color-accent: #000000;
     --color-accent-darker: #f07136;
     --color-white: #ffffff;
     --header-height: 4.5rem;
